# github-actions-tray

./: .gitignore  LICENSE  README.md  README.ru.md  config.example.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
app/: action_state.py  autostart.py  config.py  i18n.py  overlay.py  poller.py  settings_window.py  taskbar_geometry.py  theme.py  tray.py
