[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "githubactions-tray"
version = "1.0.0"
description = "Windows tray indicator and taskbar overlay for GitHub Actions workflow status."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "GitHub Actions Tray contributors" }]
keywords = ["github", "actions", "ci", "windows", "tray", "taskbar", "overlay", "pyside6"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "PySide6>=6.6",
    "pywin32>=306",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/Twen1x/github-actions-tray"
Repository = "https://github.com/Twen1x/github-actions-tray"
Issues = "https://github.com/Twen1x/github-actions-tray/issues"
Changelog = "https://github.com/Twen1x/github-actions-tray/blob/main/CHANGELOG.md"

[project.gui-scripts]
github-actions-tray = "main:main"

[tool.ruff]
line-length = 100
target-version = "py39"
